last update where ( add admin , mail , queu , jop , profile and layouts

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,42 @@
+/*
+ * Base structure
+ */
+
+body {
+    background-color: #ffffff;
+}
+
+a {
+    text-decoration: none !important;
+}
+
+
+/*
+   * Top navigation
+   * Hide default border to remove 1px line.
+   */
+
+.navbar-fixed-top {
+    border: 0;
+}
+
+
+/** my favorite color     #E9ECEF*/
+
+.my-favourit-color {
+    background-color: #7C5BC2 !important;
+    color: white
+}
+
 .my-navbar {
-    background-color: #563D7C !important;
-    color: #F1F1F1 !important
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #7C5BC2 !important;
+    color: #F1F1F1 !important;
+    z-index: 9;
+    min-height: 65px;
 }
 
 .my-navbar a {
@@ -15,4 +51,147 @@
 
 .my-navbar .links {
     margin-left: 50px
+}
+
+
+/*css for any list*/
+
+.list-item {
+    margin: 0;
+    padding: 5px 15px;
+    font-size: 16px;
+}
+
+.list-item a {
+    text-decoration: none;
+    color: #fff !important;
+}
+
+.list-item:hover {
+    background-color: #AC8EDE;
+}
+
+.list-item:hover a {
+    color: #fff !important;
+}
+
+
+/**
+ * Sidebar
+ */
+
+@media(min-width: 1120px) {
+    .sidebar {
+        background-color: #7C5BC2 !important;
+        height: 100%;
+        top: 65px;
+        left: 0;
+        width: 240px;
+        z-index: 100;
+        font-size: 16px;
+    }
+}
+
+.my-dashboard {
+    font-size: 20px !important;
+    border-bottom: 2px solid rgb(17, 1, 41);
+}
+
+
+/* app-content css     */
+
+.app-content {
+    position: relative;
+    top: 65px !important;
+    margin-top: 14px;
+}
+
+
+/* sub-header css     */
+
+.sub-header {
+    padding-bottom: 10px;
+    border-bottom: 5px solid #eee;
+    color: #888888;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+}
+
+
+/*  Placeholder dashboard ideas     */
+
+.placeholders {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.placeholders h4 {
+    margin-bottom: 0;
+}
+
+.placeholder {
+    margin-bottom: 20px;
+    background-color: #eceaef;
+    border: 0;
+    border-radius: 50%;
+    padding: 30px
+}
+
+.placeholder span {
+    font-size: 20px;
+    font-display: initial;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif'
+}
+
+.placeholder img {
+    display: inline-block;
+    border-radius: 50%;
+}
+
+
+/*** for edit page profile **/
+
+.card-user .card-image {
+    height: 180px;
+}
+
+.card .card-image {
+    width: 100%;
+    overflow: hidden;
+    border-radius: 4px 4px 0 0;
+    position: relative;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+}
+
+.card .card-image img {
+    width: 100%;
+    vertical-align: middle;
+    border-style: none;
+    background-size: cover;
+}
+
+.card-user .author {
+    text-align: center;
+    text-transform: none;
+    margin-top: -70px;
+}
+
+.avatar {
+    width: 124px;
+    height: 124px;
+    border: 5px solid #FFFFFF;
+    position: relative;
+    margin-bottom: 15px;
+}
+
+.card .avatar {
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.avatar .border-gray {
+    border-color: #EEEEEE;
 }
